# mkostenko-postgraduate

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  result.xlsx  tsconfig.json
client-app/: package-lock.json  package.json  tsconfig.json
client-app/electron/: main.ts  preload.ts
client-app/electron/main/: index.ts
client-app/electron/preload/: index.ts
client-app/electron/shared/: ApiItem.ts  api-items.ts  index.ts  types.ts
client-app/electron/shared/utils/: numeric.ts
client-app/react-app/: index.html  index.tsx
client-app/react-app/components/AppRoot/: AppRoot.tsx  AppRoot.types.tsx  index.ts
client-app/react-app/components/ChartPage/: ChartPage.tsx  ChartPage.types.tsx  index.ts
client-app/webpack/: common.js  webpack.electron.config.js  webpack.react.config.js
config/: webpack.config.prod.js
core-js/: package-lock.json  package.json  tsconfig.json
core-js/src/core/: index.ts  types.ts
core-js/src/core/material/: index.ts
core-js/webpack/: webpack.config.prod.js
core-rust/: Cargo.toml
core-rust/src/: lib.rs
rust-node-bridge/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
rust-node-bridge/lib/: index.ts
rust-node-bridge/src/: lib.rs
src/: index.ts  xlsx-writer.ts
src/core/cracks/: two-cracks-between-homogeneous-materials.ts
src/core/material/: isotropic-material.ts
src/core/shape/: crack-shape.ts  index.ts
src/math/: index.ts
src/math/functions/: factorial.ts  index.ts
src/math/numerical-solvers/: differentiation.ts
src/math/types/: index.ts
(+12 files in other folders)
