[package]
name = "mkostenko-rust-node-bridge"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mkostenko-core-rust = { path = "../core-rust" }

[build-dependencies]
neon-build = "0.8"

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]
